--- a/software/src/platformio.ini
+++ b/software/src/platformio.ini
@@ -10,4 +10,8 @@ build_flags =
     -DARDUINO_ESP32C3_DEV
 
 lib_deps =
-    IRremoteESP8266
+    crankyoldgit/IRremoteESP8266
+    bblanchon/ArduinoJson@^6.21.3
+    adafruit/Adafruit SSD1306@^2.5.9
+    adafruit/Adafruit GFX Library
+    adafruit/Adafruit BusIO
