rotary working in 1 direction

--- a/software/src/platformio.ini
+++ b/software/src/platformio.ini
@@ -10,8 +10,8 @@ build_flags =
     -DARDUINO_ESP32C3_DEV
 
 lib_deps =
+    adafruit/Adafruit SSD1306
+    adafruit/Adafruit GFX Library
+    mathertel/RotaryEncoder
     crankyoldgit/IRremoteESP8266
     bblanchon/ArduinoJson@^6.21.3
-    adafruit/Adafruit SSD1306@^2.5.9
-    adafruit/Adafruit GFX Library
-    adafruit/Adafruit BusIO
