--- a/software/src/platformio.ini
+++ b/software/src/platformio.ini
@@ -10,6 +10,7 @@ build_flags =
     -DARDUINO_ESP32C3_DEV
 
 lib_deps =
+    olikraus/U8g2
     adafruit/Adafruit SSD1306
     adafruit/Adafruit GFX Library
     crankyoldgit/IRremoteESP8266
