--- a/software/src/platformio.ini
+++ b/software/src/platformio.ini
@@ -13,5 +13,6 @@ lib_deps =
     olikraus/U8g2
     adafruit/Adafruit SSD1306
     adafruit/Adafruit GFX Library
+    spirik/GEM
     crankyoldgit/IRremoteESP8266
     bblanchon/ArduinoJson@^6.21.3
