--- a/software/src/platformio.ini
+++ b/software/src/platformio.ini
@@ -2,6 +2,9 @@
 platform = espressif32
 board = seeed_xiao_esp32c3
 framework = arduino
+
+extra_scripts = pre:get_version.py
+
 monitor_speed = 115200
 
 build_flags = 
