--- a/software/src/platformio.ini
+++ b/software/src/platformio.ini
@@ -19,3 +19,5 @@ lib_deps =
     spirik/GEM
     crankyoldgit/IRremoteESP8266
     bblanchon/ArduinoJson@^6.21.3
+
+board_build.partitions = min_spiffs.csv
