--- a/software/src/platformio.ini
+++ b/software/src/platformio.ini
@@ -19,5 +19,6 @@ lib_deps =
     spirik/GEM
     crankyoldgit/IRremoteESP8266
     bblanchon/ArduinoJson@^6.21.3
+    knolleary/PubSubClient
 
 board_build.partitions = min_spiffs.csv
