--- a/software/src/platformio.ini
+++ b/software/src/platformio.ini
@@ -7,14 +7,20 @@ extra_scripts = pre:get_version.py
 
 monitor_speed = 115200
 
-build_flags = 
-    -DARDUINO_USB_CDC_ON_BOOT=1 
+; Optimization and size-reduction flags — measure impact after enabling.
+build_flags =
+    -DARDUINO_USB_CDC_ON_BOOT=1
     -DARDUINO_USB_MODE=1
     -DARDUINO_ESP32C3_DEV
+    -Os
+    -ffunction-sections
+    -fdata-sections
+    -Wl,--gc-sections
+    -fno-exceptions
 
 lib_deps =
     olikraus/U8g2
-    adafruit/Adafruit SSD1306
+    ;adafruit/Adafruit SSD1306
     adafruit/Adafruit GFX Library
     spirik/GEM
     crankyoldgit/IRremoteESP8266
@@ -22,3 +28,10 @@ lib_deps =
     knolleary/PubSubClient
 
 board_build.partitions = min_spiffs.csv
+
+; Optional: ignore large libraries you don't use. Example to exclude IRremote
+; if you remove it or vendor a smaller subset instead:
+; lib_ignore = IRremoteESP8266
+
+; Use release build_type to strip debug symbols by default
+build_type = release
