--- a/software/src/platformio.ini
+++ b/software/src/platformio.ini
@@ -1,37 +1,39 @@
-[env:seeed_xiao_esp32c3]
-platform = espressif32
-board = seeed_xiao_esp32c3
+[env:seeed-xiao-esp32-c6]
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.10/platform-espressif32.zip
+board = esp32-c6-devkitc-1
 framework = arduino
 
-extra_scripts = pre:get_version.py
-
+board_upload.flash_size = 4MB
+board_build.partitions = huge_app.csv
 monitor_speed = 115200
 
-; Optimization and size-reduction flags — measure impact after enabling.
 build_flags =
     -DARDUINO_USB_CDC_ON_BOOT=1
     -DARDUINO_USB_MODE=1
-    -DARDUINO_ESP32C3_DEV
+    -D _IR_ENABLE_DEFAULT_FALSE_=1 ; Deaktiviert ALLE Protokolle
+    ; Pin-Mapping für D-Aliasse (Das ist erlaubt)
+    -D D0=0
+    -D D1=1
+    -D D2=2
+    -D D3=21
+    -D D4=22
+    -D D5=23
+    -D D6=16
+    -D D7=17
+    -D D8=19
+    -D D9=20
+    -D D10=18
+    ; WICHTIG: Keine SDA/SCL/MOSI Definitionen hier! Das macht der Core selbst.
+    
     -Os
-    -ffunction-sections
-    -fdata-sections
-    -Wl,--gc-sections
     -fno-exceptions
 
 lib_deps =
     olikraus/U8g2
-    ;adafruit/Adafruit SSD1306
     adafruit/Adafruit GFX Library
     spirik/GEM
-    crankyoldgit/IRremoteESP8266
+    crankyoldgit/IRremoteESP8266 @ ^2.8.6 
     bblanchon/ArduinoJson@^6.21.3
     knolleary/PubSubClient
 
-board_build.partitions = min_spiffs.csv
-
-; Optional: ignore large libraries you don't use. Example to exclude IRremote
-; if you remove it or vendor a smaller subset instead:
-; lib_ignore = IRremoteESP8266
-
-; Use release build_type to strip debug symbols by default
-build_type = release
+extra_scripts = pre:get_version.py
